Added final changes to script

--- a/scripts/Díaz DS State of the Union.ipynb
+++ b/scripts/Díaz DS State of the Union.ipynb
@@ -19,7 +19,7 @@
     }
    ],
    "source": [
-    "#obtenemos información de sistema\n",
+    "#Checks system information in linux based system, ignore this block \n",
     "!uname -a\n",
     "!lsb_release -a"
    ]
